# intentiq

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
logs/: syslog
src/: main.rs
src/detection/: llm.rs  mod.rs  rules.rs
src/grouping/: mod.rs
src/models/: event.rs
src/output/: report.rs
src/parser/: auth.rs  mod.rs  nginx.rs  syslog.rs  ufw.rs
src/storage/: mod.rs  mongo.rs  qdrant.rs
src/utils/: mod.rs
