[package]
name = "intentiq"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"